# dunelegacy

include/: SoundPlayer.h
include/CutScenes/: CutSceneSoundTrigger.h  Finale.h  Intro.h
include/FileClasses/: SFXManager.h  Vocfile.h
include/FileClasses/adl/: sound_adlib.h  wemuopl.h
include/FileClasses/music/: ADLPlayer.h  DirectoryPlayer.h  MusicPlayer.h  XMIPlayer.h
include/misc/: SDL2pp.h  sound_util.h
music-tool/: CMakeLists.txt  globals.cpp  main.cpp  vgmrecorder.cpp  vgmrecorder.h
src/FileClasses/: FileManager.cpp  Vocfile.cpp
src/FileClasses/adl/: nukedopl3.c  sound_adlib.cpp
src/FileClasses/music/: ADLPlayer.cpp
src/misc/: sound_util.cpp
